--- a/domains/emissions/Emissions.API/API/Dockerfile
+++ b/domains/emissions/Emissions.API/API/Dockerfile
@@ -7,8 +7,7 @@ ENV DATASYNCENDPOINT="http://host.docker.internal:8080/xxxxxx"
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["API/API.csproj", "API/"]
-RUN dotnet nuget add source --name github "https://nuget.pkg.github.com/energy-origin/index.json"
-RUN dotnet add API package EnergyOriginAuthorization --version 1.0.1
+RUN dotnet nuget add source --username ${{ github.actor }} --password ${{ github.token }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Energinet-DataHub/index.json"
 RUN dotnet restore "API/API.csproj"
 COPY . .
 WORKDIR "/src/API"
