--- a/.github/workflows/make-library-EnergyOriginAuthorization.yaml
+++ b/.github/workflows/make-library-EnergyOriginAuthorization.yaml
@@ -47,4 +47,4 @@ jobs:
 
     - name: Publish
       if: startsWith(github.ref, 'refs/heads/main')
-      run: dotnet nuget push build/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }}
+      run: dotnet nuget push build/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
