--- a/.github/workflows/pr-version-check-emissions.yaml
+++ b/.github/workflows/pr-version-check-emissions.yaml
@@ -25,3 +25,10 @@ jobs:
     with:
       yaml_file: domains/emissions/chart/Chart.yaml
       yaml_path: version
+
+  api_check_version:
+    name: API check version
+    uses: Energinet-DataHub/.github/.github/workflows/version-increment-check.yaml@main
+    with:
+      yaml_file: chart/values.yaml
+      yaml_path: eo-base-helm-chart.deployments.api.image.tag
