--- a/.github/workflows/pr-version-check-emissions.yaml
+++ b/.github/workflows/pr-version-check-emissions.yaml
@@ -30,5 +30,5 @@ jobs:
     name: API check version
     uses: Energinet-DataHub/.github/.github/workflows/version-increment-check.yaml@main
     with:
-      yaml_file: chart/values.yaml
+      yaml_file: domains/emissions/chart/values.yaml
       yaml_path: eo-base-helm-chart.deployments.api.image.tag
