--- a/domains/emissions/chart/Chart.yaml
+++ b/domains/emissions/chart/Chart.yaml
@@ -7,5 +7,5 @@ version: 0.0.1
 
 dependencies:
   - name: eo-base-helm-chart
-    version: "v0.6.0"
+    version: 0.6.1
     repository: "https://energinet-datahub.github.io/helm-charts/"
