--- a/.github/workflows/check-versions-emissions.yaml
+++ b/.github/workflows/check-versions-emissions.yaml
@@ -12,16 +12,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Helm chart version Check - data sync
+name: Version Check - emissions
 on:
   pull_request:
     branches: [ main ]
     paths:
-      - domains/data-sync/**
+      - domains/emissions/**
 jobs:
   helm_check_version:
     name: Helm chart check version
     uses: Energinet-DataHub/.github/.github/workflows/version-increment-check.yaml@main
     with:
-      yaml_file: domains/data-sync/chart/Chart.yaml
+      yaml_file: domains/emissions/chart/Chart.yaml
       yaml_path: version
+
+  api_check_version:
+    name: API check version
+    uses: Energinet-DataHub/.github/.github/workflows/version-increment-check.yaml@main
+    with:
+      yaml_file: domains/emissions/chart/values.yaml
+      yaml_path: eo-base-helm-chart.deployments.api.image.tag
