--- a/.github/workflows/check-licenses-energy-origin-authorization.yaml
+++ b/.github/workflows/check-licenses-energy-origin-authorization.yaml
@@ -15,3 +15,4 @@ jobs:
       uses: Energinet-DataHub/.github/.github/actions/dotnet-check-license@feature/add-mappings-to-license-check
       with:
         project-folder: libraries/dotnet/EnergyOriginAuthorization/EnergyOriginAuthorization
+        license-mapping-file: .mapped-licenses.json
