--- a/.github/workflows/build-emissions.yaml
+++ b/.github/workflows/build-emissions.yaml
@@ -1,9 +1,9 @@
 name: Build - emissions
 
 on:
-  # pull_request:
-  #   paths:
-  #     - domains/emissions/**
+  pull_request:
+    paths:
+      - domains/emissions/**
   push:
     branches:
       - main
