--- a/.github/workflows/check-licenses-energy-origin-authorization.yaml
+++ b/.github/workflows/check-licenses-energy-origin-authorization.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Check license
-      uses: Energinet-DataHub/.github/.github/actions/dotnet-check-license@feature/add-mappings-to-license-check
+      uses: Energinet-DataHub/.github/.github/actions/dotnet-check-license@main
       with:
         project-folder: libraries/dotnet/EnergyOriginAuthorization/EnergyOriginAuthorization
         license-mapping-file: .mapped-licenses.json
