--- a/.github/workflows/build-energy-origin-authorization.yaml
+++ b/.github/workflows/build-energy-origin-authorization.yaml
@@ -10,6 +10,10 @@ on:
     paths:
       - libraries/dotnet/EnergyOriginAuthorization/**
 
+concurrency:
+  group: ${{ github.ref }}-EnergyOriginAuthorization
+  cancel-in-progress: false
+
 defaults:
   run:
     working-directory: ./libraries/dotnet/EnergyOriginAuthorization
