--- a/.github/workflows/build-datahub2-api-mock.yaml
+++ b/.github/workflows/build-datahub2-api-mock.yaml
@@ -11,7 +11,7 @@ on:
       - domains/datahub2-api-mock/**
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.ref }}-datahub2-api-mock
   cancel-in-progress: false
 
 jobs:
