--- a/.github/workflows/build-emissions.yaml
+++ b/.github/workflows/build-emissions.yaml
@@ -11,7 +11,7 @@ on:
       - domains/emissions/**
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.ref }}-emissions
   cancel-in-progress: false
 
 jobs:
