Remove / from prefixes

--- a/domains/emissions/chart/values.yaml
+++ b/domains/emissions/chart/values.yaml
@@ -30,7 +30,7 @@ eo-base-helm-chart:
     stripPrefix:
       name: emissions-stripprefix
       prefixes:
-        - /api/
+        - /api
 
   env:
     DATASYNCENDPOINT:
