--- a/domains/emissions/Emissions.API/API/Properties/launchSettings.json
+++ b/domains/emissions/Emissions.API/API/Properties/launchSettings.json
@@ -14,18 +14,12 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DATASYNCENDPOINT": "http://localhost:8081/",
+        "ENERGIDATASERVICEENDPOINT": "https://api.energidataservice.dk/"
       },
-      "applicationUrl": "http://localhost:8081",
+      "applicationUrl": "http://localhost:8082",
       "dotnetRunMessages": true
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     },
     "Docker": {
       "commandName": "Docker",
