--- a/domains/emissions/Emissions.API/API/Properties/launchSettings.json
+++ b/domains/emissions/Emissions.API/API/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DATASYNCENDPOINT": "http://localhost:8081/",
-        "ENERGIDATASERVICEENDPOINT": "https://api.energidataservice.dk/"
+        "ENERGIDATASERVICEENDPOINT": "https://api.energidataservice.dk/",
+        "RENEWABLESOURCES":  "Wood, Waste, Straw , BioGas, Solar, WindInshore, WindOfShore"
       },
       "applicationUrl": "http://localhost:8082",
       "dotnetRunMessages": true
