--- a/domains/emissions/Emissions.API/API/Properties/launchSettings.json
+++ b/domains/emissions/Emissions.API/API/Properties/launchSettings.json
@@ -17,7 +17,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DATASYNCENDPOINT": "http://localhost:8081/",
         "ENERGIDATASERVICEENDPOINT": "https://api.energidataservice.dk/",
-        "RENEWABLESOURCES":  "Wood,Waste,Straw,BioGas,Solar,WindOnshore,WindOffshore"
+        "RENEWABLESOURCES": "Wood,Waste,Straw,BioGas,Solar,WindOnshore,WindOffshore",
+        "WASTERENEWABLESHARE": "55"
       },
       "applicationUrl": "http://localhost:8082",
       "dotnetRunMessages": true
