--- a/domains/data-sync/chart/templates/health-check-script.yaml
+++ b/domains/data-sync/chart/templates/health-check-script.yaml
@@ -4,6 +4,7 @@ metadata:
   name: health-check-script
 data:
     run-me.sh: |-
+            echo "ENDPOINT: '$DATAHUB2ENDPOINT'"
             while true; do
                 curl -S -s --connect-timeout 10  --head --fail $DATAHUB2ENDPOINT
                 date
