--- a/domains/data-sync/chart/templates/health-check-deployment.yaml
+++ b/domains/data-sync/chart/templates/health-check-deployment.yaml
@@ -1,5 +1,3 @@
-{{ if (((.Values.datahub).health_check).enabled) }}
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,16 +16,14 @@ spec:
     spec:
       containers:
         - name: health-check
-          image: curlimages/curl:7.82.0
+          image: '{{ .Values.healthCheck.image.name }}:{{ .Values.healthCheck.image.tag }}:'
           command: [ "/bin/sh", "/tmp/health-script/run-me.sh" ]
           env:
             - name: SLEEPINTERVAL
-              value: {{ required "datahub.health_check.sleep_interval is required" .Values.datahub.health_check.sleep_interval | quote}}
-            - name: DATAHUB2ENDPOINT
-              valueFrom:
-                secretKeyRef:
-                    name: datahub2-endpoint-secret
-                    key: endpoint
+              value: {{ required "healthCheck.sleepInterval is required" .Values.healthCheck.sleepInterval }}
+          envFrom:
+            - configMapRef:
+                name: {{ required "api config map is required" .Values.apiConfigMapName }}
           volumeMounts:
             - name: health-check-script-volume
               mountPath: "/tmp/health-script"
@@ -37,4 +33,3 @@ spec:
           configMap:
             name: health-check-script
             defaultMode: 0744
-{{ end }}
