--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   labels:
     app: data-sync-api
-  name: {{ .Release.Name }}
-  namespace: {{ .Release.Name }}
+  name: {{ .Release.Name }}-api
+  namespace: {{ .Release.Namespace }}
 spec:
   replicas: {{ .Values.api.replicaCount }}
   selector:
