--- a/domains/data-sync/chart/templates/api-service.yaml
+++ b/domains/data-sync/chart/templates/api-service.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eo-data-sync
-  namespace: eo
+  name: {{ .Release.Name }}-api
+  namespace: {{ .Release.Namespace }}
 spec:
   ports:
     - name: http
