--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -20,7 +20,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ required "api config map is required" .Values.apiConfigMapName }}
-          image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}:'
+          image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
           ports:
             - containerPort: 80
               name: http
