--- a/domains/data-sync/chart/templates/health-check-job.yaml
+++ b/domains/data-sync/chart/templates/health-check-job.yaml
@@ -6,6 +6,7 @@ spec:
   schedule: "* * * * *"
   jobTemplate:
     spec:
+      backoffLimit: 1
       template:
         spec:
           containers:
