--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -25,6 +25,17 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
+{{- range .Values.volumeSecrets }}
+          volumeMounts:
+          - name: volumeSecret
+            mountPath: "{{ required "volumeSecret path is required" Values.volumeSecret.path }} "
+            readOnly: true
+      volumes:
+        - name: volumeSecret
+          secret:
+            secretName: {{ required "volumeSecret name is required" Values.volumeSecret.name }} 
+            optional: false
+{{- end }}
 {{- if .Values.api.imagePullSecrets }}
       imagePullSecrets:
 {{- toYaml .Values.api.imagePullSecrets | nindent 8 }}
