--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -27,11 +27,11 @@ spec:
               protocol: TCP
 {{- range .Values.volumeSecrets }}
           volumeMounts:
-          - name: volumeSecret
+          - name: {{ required .name }}-volume
             mountPath: "{{ required "volumeSecret .path is required" .path }} "
             readOnly: true
       volumes:
-        - name: volumeSecret
+        - name: {{ required .name }}-volume
           secret:
             secretName: {{ required "volumeSecret .name is required" .name }} 
             optional: false
