--- a/domains/data-sync/chart/templates/health-check-script.yaml
+++ b/domains/data-sync/chart/templates/health-check-script.yaml
@@ -6,7 +6,7 @@ data:
     run-me.sh: |-
       echo "ENDPOINT: '$DATAHUB2ENDPOINT'"
       while true; do
-          curl -S -s --connect-timeout 10  --head --fail $DATAHUB2ENDPOINT
+          curl -v -S -s --connect-timeout 10  --head --fail $DATAHUB2ENDPOINT
           date
           sleep $SLEEPINTERVAL
       done
