--- a/domains/data-sync/chart/templates/health-check-job.yaml
+++ b/domains/data-sync/chart/templates/health-check-job.yaml
@@ -20,4 +20,7 @@ spec:
             envFrom:
               - configMapRef:
                   name: {{ required "api config map is required" .Values.apiConfigMapName }}
+{{- range .Values.envFrom }}
+{{- toYaml . | nindent 14 }}
+{{- end }}
           restartPolicy: Never
