--- a/domains/data-sync/chart/templates/health-check-deployment.yaml
+++ b/domains/data-sync/chart/templates/health-check-deployment.yaml
@@ -25,6 +25,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ required "api config map is required" .Values.apiConfigMapName }}
+{{- range .Values.envFrom }}
+{{- toYaml . | nindent 12 }}
+{{- end }}
           volumeMounts:
             - name: health-check-script-volume
               mountPath: "/tmp/health-script"
