--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -20,9 +20,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ required "api config map is required" .Values.apiConfigMapName }}
-{{- range .Values.envFrom }}
-{{- toYaml . | nindent 12 }}
-{{- end }}
+{{- toYaml .Values.envFrom | nindent 12 }}
           image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
           ports:
             - containerPort: 80
