--- a/domains/data-sync/chart/templates/api-deployment.yaml
+++ b/domains/data-sync/chart/templates/api-deployment.yaml
@@ -20,7 +20,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ required "api config map is required" .Values.apiConfigMapName }}
+{{- if .Values.envFrom }}
 {{- toYaml .Values.envFrom | nindent 12 }}
+{{- end }}
           image: '{{ .Values.api.image.name }}:{{ .Values.api.image.tag }}'
           ports:
             - containerPort: 80
