--- a/domains/data-sync/chart/templates/health-check-deployment.yaml
+++ b/domains/data-sync/chart/templates/health-check-deployment.yaml
@@ -25,7 +25,9 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ required "api config map is required" .Values.apiConfigMapName }}
+{{- if .Values.envFrom }}
 {{- toYaml .Values.envFrom | nindent 12 }}
+{{- end }}
           volumeMounts:
             - name: health-check-script-volume
               mountPath: "/tmp/health-script"
