--- a/domains/measurements/Measurements.API/.devcontainer/devcontainer.json
+++ b/domains/measurements/Measurements.API/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
 		"args": {
 			// Update 'VARIANT' to pick a .NET Core version: 3.1, 5.0, 6.0
 			// Append -bullseye or -focal to pin to an OS version.
-			"VARIANT": "0.202.0-6.0-bullseye-slim",
+			"VARIANT": "6.0-bullsey",
 			// Options
 			"NODE_VERSION": "lts/*"
 		}
