--- a/domains/measurements/Measurements.API/API/Properties/launchSettings.json
+++ b/domains/measurements/Measurements.API/API/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "Consumption": {
+    "Consumptions": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
