--- a/domains/measurements/Measurements.API/API/API.csproj
+++ b/domains/measurements/Measurements.API/API/API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
     <PackageReference Include="EnergyOriginAuthorization" Version="1.1.1" />
+	<PackageReference Include="EnergyOriginDateTimeExtension" Version="1.1.2" />
   </ItemGroup>
 
 </Project>
