--- a/domains/data-sync/chart/templates/health-check-job.yaml
+++ b/domains/data-sync/chart/templates/health-check-job.yaml
@@ -10,6 +10,7 @@ spec:
       backoffLimit: 0
       template:
         spec:
+          restartPolicy: Never
           containers:
           - name: health-check
             image: '{{ .Values.healthCheck.image.name }}:{{ .Values.healthCheck.image.tag }}'
@@ -22,20 +23,21 @@ spec:
               - configMapRef:
                   name: {{ required "api config map is required" .Values.apiConfigMapName }}
 {{- if .Values.envFrom }}
-{{- toYaml .Values.envFrom | nindent 12 }}
+{{- toYaml .Values.envFrom | nindent 14 }}
 {{- end }}
+
+{{- if .Values.volumeSecrets}}
             volumeMounts:
 {{- range .Values.volumeSecrets }}
               - name: {{ .name }}-volume
                 mountPath: "{{ required "volumeSecret .path is required" .path }}"
                 readOnly: true
 {{- end }}
-
-          restartPolicy: Never
           volumes:
 {{- range .Values.volumeSecrets }}
             - name: {{ .name }}-volume
               secret:
                 secretName: {{ required "volumeSecret .name is required" .name }} 
                 optional: false
+{{- end }}
 {{- end }}
