--- a/domains/data-sync/chart/templates/api-service.yaml
+++ b/domains/data-sync/chart/templates/api-service.yaml
@@ -10,5 +10,5 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: data-sync-api
+    app: {{ .Release.Name }}-api
   type: ClusterIP
