--- a/domains/data-sync/chart/templates/health-check-job.yaml
+++ b/domains/data-sync/chart/templates/health-check-job.yaml
@@ -18,11 +18,7 @@ spec:
             command:
               - /bin/sh
               - -c
-              - if [[ -z "${DATAHUB2CERTIFICATEFILEPATH}" ]]; then
-                  curl -v --connect-timeout 10 --fail $DATAHUB2ENDPOINT
-                else
-                  curl -v --connect-timeout 10 --fail --cert-type P12 --cert $DATAHUB2CERTIFICATEFILEPATH:$DATAHUB2CERTIFICATEFILEPASSWORD $DATAHUB2ENDPOINT
-                fi
+              - curl -v --connect-timeout 10 --fail --cert-type P12 --cert $DATAHUB2CERTIFICATEFILEPATH:$DATAHUB2CERTIFICATEFILEPASSWORD $DATAHUB2ENDPOINT
             envFrom:
               - configMapRef:
                   name: {{ required "api config map is required" .Values.apiConfigMapName }}
