--- a/domains/data-sync/chart/values.yaml
+++ b/domains/data-sync/chart/values.yaml
@@ -6,7 +6,7 @@ api:
   replicaCount: 3
   image:
     name: ghcr.io/energinet-datahub/eo-data-sync
-    tag: 0.4.1-pr.50-6d5b6d7
+    tag: 0.4.0
   imagePullSecrets:
 
 healthCheck:
