--- a/.github/workflows/check-licenses-measurements.yaml
+++ b/.github/workflows/check-licenses-measurements.yaml
@@ -15,3 +15,4 @@ jobs:
       uses: Energinet-DataHub/.github/.github/actions/dotnet-check-license@main
       with:
         project-folder: domains/measurements/Measurements.API/API
+        license-mapping-file: .mapped-licenses.json
