--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - "*"
       - "!main"
-    paths:
-      - domains/data-sync/**
+    # paths:
+    #   - domains/data-sync/**
 
 jobs:
   autocreate-pr:
