--- a/.github/workflows/auto-create-pr-data-sync.yaml
+++ b/.github/workflows/auto-create-pr-data-sync.yaml
@@ -3,8 +3,8 @@ name: Auto-create PR - data sync
 on:
   push:
     branches:
-      - "*"
-    #   - "!main"
+      - "**"
+      - "!main"
     # paths:
     #   - domains/data-sync/**
 
